# all-in-one-news

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: rust.yml
.sqlx/: query-05c40b58b4fce8a31acfaadebc1c57f3f507f8c51c2180cb5c4019699c170448.json  query-0ae86c783ef5297d40784a74070d24846214de28040de9f25df3b2460ed3349b.json  query-180b5d45eca9dd5d5a8b5464187d75b1adbf55010d7ac52fe765883590df4d25.json  query-1843e57dabfa0e60a02d6be46160958362332ac745c38f86549263929424be46.json  query-1cead6cb66814b14000b0353b840a84c6e68f810060d7fb14866c43415675eda.json  query-20c9da2cf9c3f16603c2a869ce3248398f501ad72d471e29731493cf91b2ad1d.json  query-29b507d94061264a53d0d4aa55aad8311daed28317a136cdc1cb38362a84b715.json  query-2da4f9556c412f3a8e8148bca93e50d1f73d3620613ad074140aadf4b8fe38f5.json  query-36d9eee1888a3296137c1e053987843546a92f3370a7e051587845b413f73e3a.json  query-370df3daa5a53380c618e3b6396f9569c22e80251dff5ecf4ff25cd4d7af4142.json  query-42673072989bdebaa3f969b93c9be2f47ce4b6e1853f8eaf451bf3c09c59e45f.json  query-46731874e299ee15388cd7ef50b4a7d2d5ff128315b1a371b1704fa6a0ee062d.json  query-5352f03c15465189d505b0a3d56db8a57715484936db8b925f8b3346dae5c367.json  query-539e270b6c43670291a225b3323155deba7d4b24f759967f7f9cdb49f61a3c5d.json  query-554fddb7adedef031c666c3fe04b0d899e988bb5673019785239ed21ba275367.json  query-5761643832f430ebeff8df18e5ee240fd3147d579289b97d69ac1136de22b339.json  query-6a05980e520390d87ce6e19ecbaf1f9073a9e0ce99dc186c6c2633850ea1fdb8.json  query-6af9e216d80c1eac8bc4e9d106e3bd6097e2c2553655dffa57994d9054ebb32a.json  query-70523c0cfb03dc4a2f78f3bc3d7b98276891755bb74025daea58fb2e12dc272a.json  query-76d656a5bb2ab2972a876e48ab5f9230636d66e605a24bbe7a3706828c64e502.json  query-7e6a78e6bd799abccd6b334397cb46f94a9fef0532b8ac4449d7b75e1a12facf.json  query-89b3c95ed4d9bb931679809e0ba0299aedbd98d4b8e11fce2e60eeaed9e9e663.json  query-8f04027b377c34270d7b0f989625111d6fe7a0d369a86a9d8dab23865e08c919.json  query-90b0fd9921e797374d764d31eebd7acc644bd458ed5c45ba51cb5543ef867ae3.json  query-91384c1052b0cbcc75343ce69e37f9347f990df0a42eeb856d0ba60444d8dd09.json  query-943c3662e9c970e63d2cb3ffea136851631cc6ad0813a6bbdc721d8eaa05bb9a.json  query-953aa3ab6b1ebbf25893729fd5638081cde983afb73257721fa1a0d8330c1fc8.json  query-99ebf73021a728fc7ac96594931450f63b6d4c018dac3b1d3b541638380fd60d.json  query-9c6f1bc2a8019a4ead641e067cfb4a3c0e0f3789365fa011204be1856c218ab1.json  query-9da84023e7fffd86eaa205a71d9f8aa55e810e6e396f2c35471bb20741552f9f.json  query-9efef7f7a0312b10e6ce02e85d030c19312dd00bf1247d0db5e8aa03927684c6.json  query-9f07427d01a2ef5e2644edc961443b9938a5cdecd787c968d860766085855fe2.json  query-a88a7d0103d34ce094697fe5d9341528f1d6cf7bd4a13489605af71e901db3d3.json  query-b005527403122b22322ec33921ced9a556412697e3c91760ad9fca83406ad756.json  query-bb3da44f5cab920a5b2be43182f664eb71da4d341c27681fe6e0c17f02e4167f.json  query-bd0e33acaf76e5deed8b0b7cc09bc486ac3e27fa4db3c662aeb76eab4afe2fdb.json  query-be3df5d7b9fa56a6137647d39d0b7e6b944b77dba4a4da1fbcba07a614f1b58e.json  query-be71770d4feacc9e77121430957d72c6119919fa5850a5d2555bd4b7af833d2b.json  query-c965eb1fd8741d8fb97da5249855176435344c5d3d31040b5c6b74d3893ac448.json  query-d06ecd7ffe1aa7cd3ab7fe7e94e24676be0b3fbc818767670f793d4dba234feb.json  (+7 more)
backend/axum-db/: Cargo.toml  spec.yaml
backend/axum-db/configuration/: base.yaml
backend/axum-db/migrations/: 20230914154650_rebase_table.sql  20230915065127_rebase_daily_table.sql
backend/axum-db/scripts/: init_db.sh
backend/axum-db/src/: configuration.rs  errors.rs  main.rs  startup.rs
backend/axum-db/src/routes/: mod.rs
backend/axum-db/src/routes/list/: list_all.rs  list_author.rs  mod.rs
backend/axum-db/src/routes/query/: mod.rs  query_all.rs  query_all_author.rs  query_by_id.rs  query_by_tag.rs  query_by_time.rs  query_latest_news.rs
backend/axum-db/tests/app/: helpers.rs
configuration/: base.yaml
crates/aion-types/: Cargo.toml
crates/aion-types/src/: lib.rs  parse_key.rs
crates/aion-types/src/rebase/: mod.rs  rebase_daily.rs  response.rs
crates/aion-types/src/tag/: mod.rs
crates/parse/: Cargo.toml
crates/parse-article/: .gitignore  README.md
crates/parse-article/src/: lib.rs
crates/parse-article/src/rebase/: display_notion.rs  logic.rs
crates/parse-article/src/rebase/types/: mod.rs
crates/parse-article/src/rustcc/: health_check.rs
crates/parse-article/src/rustcc/types/: message.rs  section_link.rs
crates/parse/src/: lib.rs
crates/parse/src/rebase/: api.rs  constant.rs  hellath_check.rs  logic.rs  mod.rs
crates/parse/src/rebase/types/: attribute.rs  meta.rs  mod.rs
crates/parse/src/rustcc/: display_notion.rs  health_check.rs  logic.rs  mod.rs
crates/parse/src/rustcc/types/: article.rs  mod.rs  section_link.rs
docs/: aions.excalidraw  thinking.md
frontend/all-in-one-news/: package-lock.json  package.json
frontend/all-in-one-news/src/: App.js  TaskList.js
frontend/web/: Cargo.toml
frontend/web/src/: fetch_data.rs  main.rs  story.rs  types.rs
frontend/web/src/rebase/: mod.rs  types.rs
migrations/: 20230915065127_rebase_daily_table.sql  20231001075701_create_rustcc_table.sql  20240529030610_rebase_daily.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs
src/routes/query/: mod.rs  query_latest_news_id.rs
src/routes/rebase/: mod.rs  query_all.rs  query_all_author.rs  query_by_id.rs  query_by_tag.rs  query_by_time.rs  query_latest_news.rs  query_latest_news_id.rs
src/routes/rustcc/: mod.rs  query_all.rs  query_all_author.rs  query_by_hash.rs  query_by_id.rs  query_by_tag.rs  query_by_time.rs  query_latest_news.rs  query_latest_news_id.rs
src/templates/: all_news.rs  index.rs  latest_news.rs  mod.rs
static/: style.css
templates/: all_news.html  index.html  latest_news.html
tests/app/: helpers.rs
