[package]
name = "all-in-one-news"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
name = "aion"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
actix-web = "4.6.0"
bytes = "1.4"
chrono = "0.4"
config = "0.13"
http = "0.2"
hyper = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3"
uuid = { version = "1.4", features = ["serde", "v4"] }
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4.2"
regex = "1"
tracing-actix-web = "0.7.10"
actix-cors = "0.7.0"
reqwest = { version = "0.12", features = ["json"] }

# aion
aion-types = { version = "0.1.0", path = "./crates/aion-types" }
aion-parse = { version = "0.1.0", path = "./crates/parse" }
is-url = "1.0.4"
askama = "0.12.1"
askama_actix = "0.14.0"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = { version = "0.12" }
uuid = { version = "1.4", features = ["serde", "v4"] }
once_cell = "1"
proptest = "1.3.1"
pretty_assertions = "1.4.0"
fake = "2.6.1"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.5"
wiremock = "0.6"
surf = "2.3.2"
serde_json = "1"
linkify = "0.10"


[workspace]
members = ["crates/*"]
