[package]
name = "aion-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30", features = ["rkyv"] }
serde = { version = "1.0.188", features = ["derive"] }
aion-parse = { path = "../parse" }
anyhow = "1.0.75"
async-openai = "0.15.0"
sha256 = "1.4.0"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio",
    "tls-rustls",
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
openai = []
