[package]
name = "all-in-one-new-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
dioxus = "0.4.0"
dioxus-web = "0.4.0"
reqwest = { version = "0.11.20", features = ["json"] }

# aion
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
serde_json = "1.0.107"
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3.28"
async-recursion = "1.0.5"
log = "0.4.20"
wasm-logger = "0.2.0"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
